[project]
name = "unicloud"
version = "0.4.0"
description = "cloud storage utils package"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Mostafa Farrag", email = "moah.farrag@gmail.com"},
]


keywords = [
    "cloud",
    "storage",
    "aws",
    "s3",
    "gcs",
    "google-cloud-storage",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving",
    "Intended Audience :: Developers",
]

requires-python = ">=3.11,<4"
dependencies = [
    "loguru>=0.7.2",
    "numpy>=2.1.2",
    "pandas>=2.2.0",
]

[project.optional-dependencies]
gcs = [
    "google-cloud-storage>=2.1.0",
    "google-api-python-client>=2.119.0",
]
s3 = [
    "boto3>=1.35.40",
]
all = [
    "google-cloud-storage>=2.1.0",
    "google-api-python-client>=2.119.0",
    "boto3>=1.35.40",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pre-commit>=4.0.1",
    "pre-commit-hooks>=5.0.0",
    "pre-commit-commit-msg-hooks>=0.1.0",
    "moto>=5.0.22",
]

docs = [
    "sphinx>=8.1.3",
    "pydata-sphinx-theme>=0.16.1",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings>=0.24.0",
    "mkdocstrings-python>=1.7.5",
    "mike>=2.1.3",
    "mkdocs-jupyter>=0.25.1",
    "mkdocs-autorefs>=1.2",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-table-reader-plugin>=3.1.0",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "jupyter-contrib-nbextensions>=0.7.0",
    "notebook<7.0",
    "jupyter",
]


[project.urls]
Homepage = "https://github.com/serapeum-org/unicloud"
Documentation = "https://unicloud.readthedocs.io/en/latest/"
Repository = "https://github.com/serapeum-org/unicloud"


[tool.hatch.build.targets.wheel]
packages = ["src/unicloud"]


[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["unicloud"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
ensure_newline_before_comments = true


[tool.black]
line-length = 88
skip-string-normalization = true


[tool.flake8]
ignore = "E501, E203, E266, W503"
per-file-ignores = "__init__.py:F401"
max-line-length = 88
max-complexity = 18
count = true


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
markers = [
    "e2e: marks tests as end-to-end (deselect with '-m \"e2e\"')",
    "mock: marks tests as mock (deselect with '-m \"mock\"')",
]


[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true
no_implicit_optional = false

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
